# probspace_thisis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Student Cup 2022/: Student Cup 2022 3rd place solution.pptx  score-record.xlsx
Student Cup 2022/notebook/: StudentCup22_MakePseudoData.ipynb
code/: 20230314_deberta-v3-base.ipynb
code/Embedding/: 0502.ipynb
code/Inference/: Inference.ipynb
code/learn/: comform_test_classfy.ipynb
code/modeling/: 20230303_bertclassificate.ipynb  20230312_bertclassificate.ipynb  20230314_bertclassificate.ipynb  20230314_deberta-v3-base.ipynb  20230315_bertclassificate.ipynb  20230315_deberta-v3-base.ipynb  20230317_senpai_base.ipynb  20230412_test_base.ipynb
code/proceccing_/: kfold.ipynb
data/: submission.csv
data/output/: 20230219_train.csv
docker/: Dockerfile  docker-compose.yml
masaki/output/: 001_submission.csv
work/exp001/: Article _ exp001.ipynb
work/exp002/: Article _ exp002.ipynb
work/exp003/: Article _ exp003.ipynb
work/exp004/: Article _ exp004.ipynb
work/exp005/: Article _ exp005.ipynb
work/exp006/: Article _ exp006.ipynb
work/exp007/: Article _ exp007.ipynb
work/exp008/: Article _ exp008 inference [cv=0.6990].ipynb  Article _ exp008 train.ipynb
work/exp009/: Article _ exp009 inference [cv=0.6807].ipynb  Article _ exp009 train.ipynb
work/exp010/: Article _ exp010 inference [cv=0.7069].ipynb  Article _ exp010 train.ipynb
work/exp011/: Article _ exp011 train.ipynb
work/exp013/: Article _ exp013 [train].ipynb  (+1 more)
work/exp019/: DataAugmentation.ipynb
(+56 files in other folders)
