[tool.poetry]
name = "probspace"
version = "1.2.2"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "probspace"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.26.1"
torch = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"