[tool.poetry]
name = "probspace"
version = "1.4.0"
description = ""
authors = ["masaki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.26.1"
torch = "^1.13.1"
pandas = "^1.5.3"
polars = "^0.16.11"
jupyterlab = "^3.6.1"
scikit-learn = "^1.2.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
