[tool.poetry]
name = "probspace"
version = "1.4.0"
description = ""
authors = ["masaki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
polars = "^0.16.13"
transformers = "^4.26.1"
scikit-learn = "^1.2.1"
tqdm = "^4.65.0"
sentencepiece = "^0.1.97"
protobuf = "3.20"
ipywidgets = "^8.0.4"
jupyterlab-widgets = "^3.0.5"
jupyterlab = "^3.6.1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
